--- a/did-core/index.html
+++ b/did-core/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>
-    Decentralized Identifiers (DIDs) v1.0
+    탈중앙 식별자 Decentralized Identifiers (DIDs) v1.0
   </title>
   <meta content='text/html; charset=utf-8' http-equiv='Content-Type'><!--
     === NOTA BENE ===
