--- a/did-core/CGFR/2019-08-10/index.html
+++ b/did-core/CGFR/2019-08-10/index.html
@@ -947,7 +947,7 @@ Real World Example
   <section class="informative" id="introduction">
     <h2 id="x1-introduction"><bdi class="secno">1. </bdi>
 Introduction
-    <a class="self-link" aria-label="§" href="#introduction"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#introduction"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
       <p>
 Conventional <a href="https://en.wikipedia.org/wiki/Identity_management">identity
@@ -1076,7 +1076,7 @@ see the DID Method Registry [<cite><a class="bibref" href="#bib-did-method-regis
   <section class="informative" id="a-simple-example">
     <h3 id="x1-1-a-simple-example"><bdi class="secno">1.1 </bdi>
 A Simple Example
-    <a class="self-link" aria-label="§" href="#a-simple-example"></a></h3><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#a-simple-example"></a></h3><p><em>이 섹션은 비표준입니다.</em></p>
 
     <p>
 A DID is a simple text string that consists of three parts: 1) the URL scheme
@@ -1123,7 +1123,7 @@ interact with the entity.
     <section class="informative" id="design-goals">
       <h3 id="x1-2-design-goals"><bdi class="secno">1.2 </bdi>
 Design Goals
-      <a class="self-link" aria-label="§" href="#design-goals"></a></h3><p><em>This section is non-normative.</em></p>
+      <a class="self-link" aria-label="§" href="#design-goals"></a></h3><p><em>이 섹션은 비표준입니다.</em></p>
 
       <p>
 Decentralized Identifiers are a component of larger systems, such as
@@ -1280,7 +1280,7 @@ portability, or simplicity.
   <section class="informative" id="terminology">
     <h2 id="x2-terminology"><bdi class="secno">2. </bdi>
 Terminology
-    <a class="self-link" aria-label="§" href="#terminology"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#terminology"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <div data-oninclude="restrictReferences"><p>
 This document attempts to communicate the concepts outlined in the
@@ -1506,7 +1506,7 @@ An identifier as defined by [<cite><a class="bibref" href="#bib-rfc3986" title="
   <section class="informative" id="data-model">
     <h2 id="x3-data-model"><bdi class="secno">3. </bdi>
 Data Model
-    <a class="self-link" aria-label="§" href="#data-model"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#data-model"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
     <p>
 This section outlines the Decentralized Identifier data model concepts,
 in particular how keys, services, and the <a href="#dfn-did-subject" class="internalDFN" data-link-type="dfn">DID Subject</a> are related to the
@@ -3162,7 +3162,7 @@ deactivation is not possible.
     <section class="informative" id="unique-did-method-names">
       <h3 id="x7-3-unique-did-method-names"><bdi class="secno">7.3 </bdi>
 Unique DID Method Names
-      <a class="self-link" aria-label="§" href="#unique-did-method-names"></a></h3><p><em>This section is non-normative.</em></p>
+      <a class="self-link" aria-label="§" href="#unique-did-method-names"></a></h3><p><em>이 섹션은 비표준입니다.</em></p>
       <p>
 The authors of a new DID method specification
 <em class="rfc2119" title="SHOULD">SHOULD</em> use a method name that is unique among all DID method
@@ -3218,7 +3218,7 @@ specified in [<cite><a class="bibref" href="#bib-did-resolution" title="Decentra
   <section class="informative" id="security-considerations">
     <h2 id="x9-security-considerations"><bdi class="secno">9. </bdi>
 Security Considerations
-    <a class="self-link" aria-label="§" href="#security-considerations"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#security-considerations"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <p>
 NOTE TO IMPLEMENTERS: During the Implementer’s Draft stage, this
@@ -3679,7 +3679,7 @@ and others are of partial data, where the larger context is assumed.
   <section class="informative" id="privacy-considerations">
     <h2 id="x10-privacy-considerations"><bdi class="secno">10. </bdi>
 Privacy Considerations
-    <a class="self-link" aria-label="§" href="#privacy-considerations"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#privacy-considerations"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <p>
 It is critically important to apply the principles of Privacy by Design
@@ -3805,7 +3805,7 @@ standard lengths.
   <section class="informative" id="future-work">
     <h2 id="x11-future-work"><bdi class="secno">11. </bdi>
 Future Work
-    <a class="self-link" aria-label="§" href="#future-work"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#future-work"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <section id="upper-limits-on-did-character-length">
       <h3 id="x11-1-upper-limits-on-did-character-length"><bdi class="secno">11.1 </bdi>
