--- a/did-core/FPWD/2019-11-07/index.html
+++ b/did-core/FPWD/2019-11-07/index.html
@@ -1013,7 +1013,7 @@ Real World Example
   <section class="informative" id="introduction">
     <h2 id="x1-introduction"><bdi class="secno">1. </bdi>
 Introduction
-    <a class="self-link" aria-label="§" href="#introduction"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#introduction"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
       <p>
 Conventional <a href="https://en.wikipedia.org/wiki/Identity_management">identity
@@ -1143,7 +1143,7 @@ see the DID Method Registry [<cite><a class="bibref" href="#bib-did-method-regis
   <section class="informative" id="a-simple-example">
     <h3 id="x1-1-a-simple-example"><bdi class="secno">1.1 </bdi>
 A Simple Example
-    <a class="self-link" aria-label="§" href="#a-simple-example"></a></h3><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#a-simple-example"></a></h3><p><em>이 섹션은 비표준입니다.</em></p>
 
     <p>
 A <a href="#dfn-did" class="internalDFN" data-link-type="dfn">DID</a> is a simple text string that consists of three parts: 1) the URL scheme
@@ -1190,7 +1190,7 @@ used to interact with the entity.
     <section class="informative" id="design-goals">
       <h3 id="x1-2-design-goals"><bdi class="secno">1.2 </bdi>
 Design Goals
-      <a class="self-link" aria-label="§" href="#design-goals"></a></h3><p><em>This section is non-normative.</em></p>
+      <a class="self-link" aria-label="§" href="#design-goals"></a></h3><p><em>이 섹션은 비표준입니다.</em></p>
 
       <p>
 <a href="#dfn-did" class="internalDFN" data-link-type="dfn">Decentralized Identifiers</a> are a component of larger systems, such as
@@ -1347,7 +1347,7 @@ portability, or simplicity.
   <section class="informative" id="terminology">
     <h2 id="x2-terminology"><bdi class="secno">2. </bdi>
 Terminology
-    <a class="self-link" aria-label="§" href="#terminology"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#terminology"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <div data-oninclude="restrictReferences"><p>
 This document attempts to communicate the concepts outlined in the
@@ -1590,7 +1590,7 @@ Committee</a>.
   <section class="informative" id="data-model">
     <h2 id="x3-data-model"><bdi class="secno">3. </bdi>
 Data Model
-    <a class="self-link" aria-label="§" href="#data-model"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#data-model"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
     <p>
 This section outlines the <a href="#dfn-did" class="internalDFN" data-link-type="dfn">decentralized identifier</a> data model concepts,
 in particular how keys, services, and the <a href="#dfn-did-subject" class="internalDFN" data-link-type="dfn">DID subject</a> are related to the
@@ -3294,7 +3294,7 @@ deactivation is not possible.
     <section class="informative" id="unique-did-method-names">
       <h3 id="x7-3-unique-did-method-names"><bdi class="secno">7.3 </bdi>
 Unique DID Method Names
-      <a class="self-link" aria-label="§" href="#unique-did-method-names"></a></h3><p><em>This section is non-normative.</em></p>
+      <a class="self-link" aria-label="§" href="#unique-did-method-names"></a></h3><p><em>이 섹션은 비표준입니다.</em></p>
       <p>
 The authors of a new <a href="#dfn-did-method" class="internalDFN" data-link-type="dfn">DID method</a> specification
 <em class="rfc2119" title="SHOULD">SHOULD</em> use a method name that is unique among all <a href="#dfn-did-method" class="internalDFN" data-link-type="dfn">DID method</a>
@@ -3350,7 +3350,7 @@ specified in [<cite><a class="bibref" href="#bib-did-resolution" title="Decentra
   <section class="informative" id="security-considerations">
     <h2 id="x9-security-considerations"><bdi class="secno">9. </bdi>
 Security Considerations
-    <a class="self-link" aria-label="§" href="#security-considerations"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#security-considerations"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <p>
 NOTE TO IMPLEMENTERS: During the Implementer’s Draft stage, this
@@ -3809,7 +3809,7 @@ and others are of partial data, where the larger context is assumed.
   <section class="informative" id="privacy-considerations">
     <h2 id="x10-privacy-considerations"><bdi class="secno">10. </bdi>
 Privacy Considerations
-    <a class="self-link" aria-label="§" href="#privacy-considerations"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#privacy-considerations"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <p>
 It is critically important to apply the principles of Privacy by Design
@@ -3937,7 +3937,7 @@ standard lengths.
   <section class="informative" id="future-work">
     <h2 id="x11-future-work"><bdi class="secno">11. </bdi>
 Future Work
-    <a class="self-link" aria-label="§" href="#future-work"></a></h2><p><em>This section is non-normative.</em></p>
+    <a class="self-link" aria-label="§" href="#future-work"></a></h2><p><em>이 섹션은 비표준입니다.</em></p>
 
     <section id="upper-limits-on-did-character-length">
       <h3 id="x11-1-upper-limits-on-did-character-length"><bdi class="secno">11.1 </bdi>
