--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -1,21 +1,15 @@
 <p>
-This document attempts to communicate the concepts outlined in the
-<a>decentralized identifier</a> space by using specialized terms to discuss
-specific concepts. This terminology is included below and linked to throughout
-the document to aid the reader:
+이 문서는 <a>분산 식별자</a> 분야에서 사용되는 특정 개념을 논의하기 위한 특수 용어들을 전달하고자 한다. 
+아래에 있는 용어들은 독자를 돕기 위해 문서 전체에 링크되어 있다:
 </p>
 
 <dl class="termlist">
 
-  <dt><dfn data-lt="blockchains|blockchain technology">blockchain</dfn></dt>
+  <dt><dfn data-lt="blockchains|blockchain technology">블록체인 (Blockchain)</dfn></dt>
 
   <dd>
-A specific type of <a>distributed ledger technology</a> (DLT) that stores ledger
-entries in blocks of transactions, which are grouped together and hashed into a
-cryptographic chain. Because this type of <a>DLT</a> was introduced by
-<a href="https://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a>, the term
-<em>blockchain</em> is sometimes used to refer specifically to the Bitcoin
-ledger.
+특정한 방식의 <a>분산원장기술</a> (Distributed Ledger Technology, DLT)로 암호화된 체인에 원장의 항목들을 묶고 해시해서 저장한다. 
+이러한 타입의 <a>분산원장</a>이 <a href="https://en.wikipedia.org/wiki/Bitcoin">비트코인</a>에 의해 처음 소개되었기 때문에 <em>블록체인</em> 이라는 단어는 가끔 구체적으로 비트코인 원장을 의미하기도 한다.
   </dd>
 
   <dt><dfn data-lt="decentralized identifiers|DID|DIDs">decentralized identifier</dfn> (DID)</dt>
