--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -5,7 +5,7 @@
 
 <dl class="termlist">
 
-  <dt><dfn data-lt="blockchains|blockchain technology">블록체인 (Blockchain)</dfn></dt>
+  <dt><dfn data-lt="블록체인|블록체인 기술">블록체인 (Blockchain)</dfn></dt>
 
   <dd>
 특정한 방식의 <a>분산원장기술</a> (Distributed Ledger Technology, DLT)로 암호화된 체인에 원장의 항목들을 묶고 해시해서 저장한다. 
